# tinytetris

./: .gitignore  CMakeLists.txt  tinytetris-commented.cpp
scripts/: start.sh
src/: app.cpp
src/models/: game.cpp  game.hpp
